; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ath79/files/drivers/mtd/nand/raw/extr_ar934x_nand.c_ar934x_nfc_send_readid.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ath79/files/drivers/mtd/nand/raw/extr_ar934x_nand.c_ar934x_nfc_send_readid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ar934x_nfc = type { i32, i32 }

@.str = private unnamed_addr constant [18 x i8] c"readid, cmd:%02x\0A\00", align 1
@AR934X_NFC_CMD_SEQ_1C1AXR = common dso_local global i32 0, align 4
@AR934X_NFC_CMD_CMD0_M = common dso_local global i32 0, align 4
@AR934X_NFC_CMD_CMD0_S = common dso_local global i32 0, align 4
@AR934X_NFC_ID_BUF_SIZE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"[id] \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ar934x_nfc*, i32)* @ar934x_nfc_send_readid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ar934x_nfc_send_readid(%struct.ar934x_nfc* %0, i32 %1) #0 {
  %3 = alloca %struct.ar934x_nfc*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ar934x_nfc* %0, %struct.ar934x_nfc** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @nfc_dbg(%struct.ar934x_nfc* %7, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = load i32, i32* @AR934X_NFC_CMD_SEQ_1C1AXR, align 4
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @AR934X_NFC_CMD_CMD0_M, align 4
  %13 = and i32 %11, %12
  %14 = load i32, i32* @AR934X_NFC_CMD_CMD0_S, align 4
  %15 = shl i32 %13, %14
  %16 = load i32, i32* %5, align 4
  %17 = or i32 %16, %15
  store i32 %17, i32* %5, align 4
  %18 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %3, align 8
  %19 = load i32, i32* @AR934X_NFC_ID_BUF_SIZE, align 4
  %20 = load i32, i32* %5, align 4
  %21 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %3, align 8
  %22 = getelementptr inbounds %struct.ar934x_nfc, %struct.ar934x_nfc* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @ar934x_nfc_do_rw_command(%struct.ar934x_nfc* %18, i32 -1, i32 -1, i32 %19, i32 %20, i32 %23, i32 0)
  store i32 %24, i32* %6, align 4
  %25 = load %struct.ar934x_nfc*, %struct.ar934x_nfc** %3, align 8
  %26 = getelementptr inbounds %struct.ar934x_nfc, %struct.ar934x_nfc* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* @AR934X_NFC_ID_BUF_SIZE, align 4
  %29 = call i32 @nfc_debug_data(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 %27, i32 %28)
  %30 = load i32, i32* %6, align 4
  ret i32 %30
}

declare dso_local i32 @nfc_dbg(%struct.ar934x_nfc*, i8*, i32) #1

declare dso_local i32 @ar934x_nfc_do_rw_command(%struct.ar934x_nfc*, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @nfc_debug_data(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
